--- a/index.html
+++ b/index.html
@@ -677,8 +677,8 @@
                     <div class="footer-links">
                         <h5>Contact Info</h5>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt me-2"></i> 123 Tech Park, Silicon Valley, CA 94025</li>
-                            <li><i class="fas fa-phone-alt me-2"></i> +1 (555) 123-4567</li>
+                            <li><i class="fas fa-map-marker-alt me-2"></i> Nairobi/Kenya</li>
+                            <li><i class="fas fa-phone-alt me-2"></i> +254 0768422915</li>
                             <li><i class="fas fa-envelope me-2"></i> info@softmarktech.com</li>
                         </ul>
                     </div>
@@ -686,7 +686,7 @@
             </div>
             <div class="row footer-bottom">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">&copy; 2023 Softmark Tech. All rights reserved.</p>
+                    <p class="mb-0">&copy; 2025 Softmark Tech. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">
@@ -737,4 +737,5 @@
         });
     </script>
 </body>
+
 </html>
