--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <div class="row">
                 <div class="col-6 col-md-3 mb-5 mb-md-0">
                     <div class="stat-item">
-                        <div class="stat-number">250+</div>
+                        <div class="stat-number">25+</div>
                         <div class="stat-label">Projects Completed</div>
                     </div>
                 </div>
@@ -550,13 +550,13 @@
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="stat-item">
-                        <div class="stat-number">50+</div>
+                        <div class="stat-number">5+</div>
                         <div class="stat-label">Team Members</div>
                     </div>
                 </div>
                 <div class="col-6 col-md-3">
                     <div class="stat-item">
-                        <div class="stat-number">10+</div>
+                        <div class="stat-number">2+</div>
                         <div class="stat-label">Years Experience</div>
                     </div>
                 </div>
@@ -678,7 +678,7 @@
                         <h5>Contact Info</h5>
                         <ul>
                             <li><i class="fas fa-map-marker-alt me-2"></i> Nairobi/Kenya</li>
-                            <li><i class="fas fa-phone-alt me-2"></i> +254 0768422915</li>
+                            <li><i class="fas fa-phone-alt me-2"></i> +254768422915</li>
                             <li><i class="fas fa-envelope me-2"></i> info@softmarktech.com</li>
                         </ul>
                     </div>
@@ -739,3 +739,4 @@
 </body>
 
 </html>
+
