--- a/contact.html
+++ b/contact.html
@@ -451,7 +451,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <h3 class="contact-title">Our Location</h3>
-                        <p class="contact-text">123 Tech Park<br>Silicon Valley, CA 94025</p>
+                        <p class="contact-text">nairobi<br>Kenya</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -473,7 +473,7 @@
                         </div>
                         <h3 class="contact-title">Call Us</h3>
                         <p class="contact-text">
-                            <a href="tel:+15551234567">+1 (555) 123-4567</a><br>
+                            <a href="tel:+15551234567">+254 768422915</a><br>
                             <a href="tel:+15559876543">+1 (555) 987-6543</a>
                         </p>
                     </div>
@@ -620,8 +620,8 @@
                     <div class="footer-links">
                         <h5>Contact Info</h5>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt me-2"></i> 123 Tech Park, Silicon Valley, CA 94025</li>
-                            <li><i class="fas fa-phone-alt me-2"></i> +1 (555) 123-4567</li>
+                            <li><i class="fas fa-map-marker-alt me-2"></i> Nairobi, Kenya</li>
+                            <li><i class="fas fa-phone-alt me-2"></i> +1 (254) 768422915</li>
                             <li><i class="fas fa-envelope me-2"></i> info@softmarktech.com</li>
                         </ul>
                     </div>
@@ -629,7 +629,7 @@
             </div>
             <div class="row footer-bottom">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">&copy; 2023 Softmark Tech. All rights reserved.</p>
+                    <p class="mb-0">&copy; 2025 Softmark Tech. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">
@@ -687,4 +687,5 @@
         });
     </script>
 </body>
+
 </html>
