--- a/about.html
+++ b/about.html
@@ -353,12 +353,13 @@
                 </div>
                 <div class="col-6 col-lg-2 mb-4">
                     <h5>Services</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Web Development</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cloud Solutions</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">IT Consulting</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Digital Transformation</a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="services.html">Web Hosting</a></li>
+                            <li><a href="services.html">Web Apps</a></li>
+                            <li><a href="services.html">System Management</a></li>
+                            <li><a href="services.html">Windows Apps</a></li>
+                            <li><a href="services.html">Management Systems</a></li>
+                        </ul>
                 </div>
                 <div class="col-lg-4 mb-4">
                     <h5>Contact</h5>
@@ -378,3 +379,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
